--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
 		"svelte": "^3.48.0",
 		"svelte-check": "^2.7.1",
 		"svelte-loader": "^3.1.3",
-		"svelte-preprocess": "^4.10.6",
+		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.2"
+		"typescript": "^4.7.2",
+		"sass": "^1.53.0"
 	},
 	"type": "module",
 	"dependencies": {
