--- a/package.json
+++ b/package.json
@@ -38,18 +38,20 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"sass": "^1.53.0",
 		"svelte": "^3.48.0",
 		"svelte-check": "^2.7.1",
 		"svelte-loader": "^3.1.3",
 		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.2",
-		"sass": "^1.53.0"
+		"typescript": "^4.7.2"
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource/caveat": "^4.5.7",
 		"@fontsource/lato": "^4.5.8",
 		"@fontsource/poppins": "^4.5.8",
+		"circletype": "^2.3.0",
 		"class-variance-authority": "^0.2.2"
 	}
 }
