--- a/package.json
+++ b/package.json
@@ -31,14 +31,18 @@
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
+		"autoprefixer": "^10.4.7",
 		"babel-loader": "^8.2.5",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-storybook": "^0.5.13",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"postcss": "^8.4.14",
+		"postcss-custom-media": "^8.0.2",
+		"postcss-load-config": "^4.0.1",
+		"postcss-nested": "^5.0.6",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
-		"sass": "^1.53.0",
 		"svelte": "^3.48.0",
 		"svelte-check": "^2.7.1",
 		"svelte-loader": "^3.1.3",
