--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.14",
 		"postcss-custom-media": "^8.0.2",
+		"postcss-extend-rule": "^4.0.0",
 		"postcss-load-config": "^4.0.1",
 		"postcss-nested": "^5.0.6",
+		"postcss-preset-env": "^7.7.2",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.48.0",
