--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/caveat": "^4.5.7",
-		"@fontsource/lato": "^4.5.8",
-		"@fontsource/poppins": "^4.5.8",
+		"@fontsource/inter": "^4.5.12",
+		"@fontsource/montserrat": "^4.5.12",
 		"circletype": "^2.3.0",
 		"class-variance-authority": "^0.2.2"
 	}
