--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"@storybook/testing-library": "^0.0.13",
 		"@storybook/theming": "^6.5.9",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0-next.525",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"autoprefixer": "^10.4.7",
@@ -48,7 +48,8 @@
 		"svelte-loader": "^3.1.3",
 		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.2"
+		"typescript": "^4.7.2",
+		"vite": "^3.1.8"
 	},
 	"type": "module",
 	"dependencies": {
