chore: remove storybook

--- a/package.json
+++ b/package.json
@@ -6,27 +6,13 @@
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
-		"prepare": "svelte-kit sync",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
-		"format": "prettier --write --plugin-search-dir=. .",
-		"storybook": "start-storybook -p 6006 --no-open",
-		"build-storybook": "build-storybook"
+		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.6",
-		"@storybook/addon-actions": "^6.5.9",
-		"@storybook/addon-essentials": "^6.5.9",
-		"@storybook/addon-interactions": "^6.5.9",
-		"@storybook/addon-links": "^6.5.9",
-		"@storybook/addon-svelte-csf": "^2.0.4",
-		"@storybook/addons": "^6.5.9",
-		"@storybook/builder-webpack4": "^6.5.9",
-		"@storybook/manager-webpack4": "^6.5.9",
-		"@storybook/svelte": "^6.5.9",
-		"@storybook/testing-library": "^0.0.13",
-		"@storybook/theming": "^6.5.9",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "^1.0.0-next.525",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -35,7 +21,6 @@
 		"babel-loader": "^8.2.5",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-storybook": "^0.5.13",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.14",
 		"postcss-custom-media": "^8.0.2",
