--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.2",
-		"vite": "^3.1.8"
+		"vite": "^3.1.8",
+		"@sveltejs/adapter-vercel": "next"
 	},
 	"type": "module",
 	"dependencies": {
