--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.6",
-		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-auto": "^1.0.0-next.86",
 		"@sveltejs/kit": "^1.0.0-next.525",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
@@ -34,8 +34,7 @@
 		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.2",
-		"vite": "^3.1.8",
-		"@sveltejs/adapter-vercel": "next"
+		"vite": "^3.1.8"
 	},
 	"type": "module",
 	"dependencies": {
