:recycle: migrate from plausible to vercel analytics'

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@fontsource/caveat": "^4.5.7",
 		"@fontsource/inter": "^4.5.12",
 		"@fontsource/montserrat": "^4.5.12",
+		"@vercel/analytics": "^0.1.11",
 		"class-variance-authority": "^0.2.2"
 	}
 }
