--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/inter": "^5.0.16",
+		"@fontsource-variable/urbanist": "^5.0.19",
 		"@fontsource/caveat": "^4.5.7",
 		"@fontsource/inter": "^4.5.12",
 		"@fontsource/montserrat": "^4.5.12",
