--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.6",
-		"@sveltejs/adapter-auto": "^1.0.0-next.86",
-		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"autoprefixer": "^10.4.7",
@@ -27,14 +28,14 @@
 		"postcss-load-config": "^4.0.1",
 		"postcss-nested": "^5.0.6",
 		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.48.0",
-		"svelte-check": "^2.7.1",
-		"svelte-loader": "^3.1.3",
-		"svelte-preprocess": "^4.10.7",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.0",
+		"svelte-check": "^3.4.3",
+		"svelte-loader": "^3.1.8",
+		"svelte-preprocess": "^5.0.3",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.2",
-		"vite": "^4.0.4"
+		"typescript": "^5.0.0",
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
