--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
@@ -14,7 +14,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.18.6",
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.5.0",
+		"@sveltejs/kit": "^2.5.4",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
@@ -34,18 +34,16 @@
 		"svelte-loader": "^3.1.8",
 		"svelte-preprocess": "^5.0.3",
 		"tslib": "^2.3.1",
-		"typescript": "^5.3.3",
-		"vite": "^5.0.0"
+		"typescript": "^5.4.3",
+		"vite": "^5.2.6"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource-variable/inter": "^5.0.16",
-		"@fontsource-variable/urbanist": "^5.0.19",
-		"@fontsource/caveat": "^4.5.7",
-		"@fontsource/inter": "^4.5.12",
-		"@fontsource/montserrat": "^4.5.12",
-		"@vercel/analytics": "^0.1.11",
-		"ai": "^2.2.32",
+		"@fontsource-variable/inter": "^5.0.17",
+		"@fontsource-variable/urbanist": "^5.0.20",
+		"@fontsource/caveat": "^5.0.17",
+		"@fontsource/inter": "^5.0.17",
+		"@fontsource/montserrat": "^5.0.17",
 		"class-variance-authority": "^0.2.2",
 		"eventsource-parser": "^1.1.1",
 		"openai": "^4.26.0"
